--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "@next/font": "^13.0.6",
     "dotenv": "^16.0.3",
     "framer-motion": "^7.6.19",
